# Pipistrelle

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  credentials.json.example  docker-compose.yml  send_alert.py  test_broker.py
deployment/: nginx_mqtt.conf  pipistrelle.service
src/: bridge.rs  codec.rs  config.rs  main.rs  metrics.rs  persistence.rs  router.rs  session.rs  tls.rs  websocket.rs
