[package]
name = "pipistrelle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
bytes = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
tokio-rustls = "0.26"
rustls-pki-types = "1.7"
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }



